# Shellify.py

./: .gitignore  README.md  pyproject.toml  shellify.py  shelltool.py
shelltool.egg-info/: PKG-INFO
test/: t1.py
