[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shelly"
version = "0.1.0"
authors = [
  { name="William L." },
]
description = "A better way to compose shell-like commands in python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]